Fix: styles on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
   font-family: f.$text-font;
   font-weight: bold;
   font-size: 1.25rem;
+  font-style: normal;
   border:none;
 
   &.main {
