--- a/src/components/Controls/styles.scss
+++ b/src/components/Controls/styles.scss
@@ -32,7 +32,8 @@ $width: 12rem;
     height: 3.5rem;
     min-width: 3.5rem;
     font-family: f.$cell-font;
-    font-weight: 800;
+    font-weight: bold;
+    font-style: italic;
     background-color: clr.$main-light;
     border: none;
 
