--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -4,5 +4,7 @@
 .timer {
   color: clr.$text;
   font-family: f.$cell-font;
+  font-style: italic;
+  font-weight: regular;
   letter-spacing: 0.1ch;
 }
